# HackSheffield25

./: .gitignore  DATABASE_SETUP.md  README.md  docker-compose.yml  grafana-dashboard.json  products.json  pyproject.toml
backend/: README.md  database.py  generate_images.py  main.py  metrics.py  models.py  requirements.txt  schemas.py  search_products.py  swiping_system.py
data/user_images/user_1764460714/: swipe_data.json
data/user_images/user_1764460714/products/: products.json
data/user_images/user_1764500598/products/: products.json
data/user_images/user_1764500598/products/product_links/: product_1_link.txt  product_2_link.txt  product_3_link.txt  product_4_link.txt  product_5_link.txt
data/user_images/user_1764503979/products/: products.json
data/user_images/user_1764503979/products/product_links/: product_1_link.txt  product_2_link.txt  product_3_link.txt  product_4_link.txt  product_5_link.txt
data/user_images/user_1764504251/products/: products.json
data/user_images/user_1764504251/products/product_links/: product_1_link.txt  product_2_link.txt  (+3 more)
data/user_images/user_1764505188/products/: products.json
data/user_images/user_1764507136/products/: products.json
data/user_images/user_1764507361/products/: products.json
data/user_images/user_1764508822/products/: products.json
data/user_images/user_1764508904/products/: products.json
data/user_images/user_1764509585/products/: products.json
frontend/: README.md  index.html  preferences.css  preferences.html  preferences.js  script.js  styles.css  swipe.css  swipe.html  swipe.js  theme.css
(+25 files in other folders)
